fix: IE11 popover list overflow fix

--- a/src/list.scss
+++ b/src/list.scss
@@ -276,6 +276,10 @@ $semantic-color: (
   &__title {
     flex: 3 3 10%;
     font-size: $fd-list-large-font-size;
+
+    &:last-child:first-child {
+      flex-basis: auto;
+    }
   }
 
   &__secondary {
